--- a/Develop/index.html
+++ b/Develop/index.html
@@ -10,34 +10,34 @@
 <body>
     <header>
         <div class="header">
+            <!-- Company name with stylization emphaizing the SEO portion of their title-->
             <h1>Hori<span class="seo">seo</span>n</h1>
             <div>
+                <!-- Navigation menu -->
                 <nav>
                     <ul>
-                        <li>
-                            <a href="#search-engine-optimization"> Search Engine Optimization</a>
-                        </li>
-                        <li>
-                            <a href="#online-reputation-management">Online Reputation Management</a>
-                        </li>
-                        <li>
-                            <a href="#social-media-marketing">Social Media Marketing</a>
-                        </li>
+                        <!-- Navigation links with anchor references to their three main sections-->
+                        <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
+                        <li><a href="#online-reputation-management">Online Reputation Management</a></li>
+                        <li><a href="#social-media-marketing">Social Media Marketing</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
+    <!-- Hero section -->
     <div class="hero"></div>
     <div class="content">
     <main>
-            <section class="search-engine-optimization">
+            <!-- Search Engine Optimization section -->
+            <section id="search-engine-optimization" class="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" alt="Illustration on a notepad depicting Search Engine Optimization (SEO) concept surrounded by different web elements" class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
             </section>
+            <!-- Online Reputation Management section -->
             <section id="online-reputation-management" class="online-reputation-management">
                 <img src="./assets/images/online-reputation-management.jpg" alt="Person accessing laptop with charts and graph indicating positive feedback with one's online reputation management" class="float-right" />
                 <h2>Online Reputation Management</h2>
@@ -45,6 +45,7 @@
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
             </section>
+            <!-- Social Media Marketing section -->
             <section id="social-media-marketing" class="social-media-marketing">
                 <img src="./assets/images/social-media-marketing.jpg" alt="Photo depicting social media marketing with various social media platform logos and interactions on a table with people sitting around it" class="float-left" />
                 <h2>Social Media Marketing</h2>
@@ -54,7 +55,9 @@
             </section>
         </div>
     </main>
+        <!-- Benefits section -->
         <div class="benefits">
+            <!-- Lead Generation benefit section, paragraph with image describing that Horiseon does lead generation -->
             <section class="benefit-lead">
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" alt="Illustration symbolizing lead generation with a funnel icon outputing dollars"/>
@@ -62,6 +65,7 @@
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
             </section>
+            <!-- Brand Awareness benefit section, paragraph with image describing that Horiseon increasing brand awareness-->
             <section class="benefit-brand">
                 <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png" alt="Icon symbolizing incread brand awareness with a lightbulb emitting sound waves"/>
@@ -69,6 +73,7 @@
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
             </section>
+            <!-- Cost Management benefit section, paragraph with image describing that Horiseon will help in managment of advertising costs -->
             <section class="benefit-cost">
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png" alt="Gear and dollar sign icons symbolizing cost management"></img>
@@ -77,14 +82,6 @@
                 </p>
             </section>
         </div>
+    <!-- Footer section -->
     <footer>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2023 Horiseon Social Solution Services, Inc.
-        </p>
-    </div>
-    </footer>
-</body>
-
-</html>
+    <
